border fix on mobile

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -438,7 +438,7 @@ footer {
   .featured-img-container {
     margin-top: 20px;
     border-radius: 0px;
-    padding: 5px;
+    padding: 2px;
     background-color: #333;
   }
   .featured-img {
